--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node server.js",
-    "client": "cd client && npm start",
+    "client": "cd client && npm install -g serve && serve -s build",
     "start": "concurrently \"npm run dev\" \"npm run client\""
     
   },
