--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "node server.js",
     "client": "cd client && npm install -g serve && serve -s build",
     "start": "node server.js"
-    
   },
   "author": "Thomas Welborn, Erik Moctezuma, Joshua Renfro, Cherluk Sumdin",
   "license": "ISC",
@@ -17,6 +16,8 @@
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
+    "jsdom": "^16.4.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "react": "^17.0.1",
